--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build && cd client && yarn run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev:server": "nest start --watch",
+    "start:dev": "concurrently \"yarn start:dev:server\" \"yarn run client\"",
+    "client": "cd client && yarn start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -26,9 +28,11 @@
     "@nestjs/mongoose": "^7.2.1",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/serve-static": "^2.1.4",
     "@types/jsonwebtoken": "^8.5.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
     "passport-jwt": "^4.0.0",
@@ -48,6 +52,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "concurrently": "^5.3.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
